<resources>
    <string name="app_name">Adventure Game</string>
    <string name="west">Go West</string>
    <string name="north">Go North</string>
    <string name="south">Go South</string>
    <string name="east">Go East</string>
    <string name="up">Go Up</string>
    <string name="down">Go Down</string>
    <string name="grab">Grab</string>
    <string name="drop">Drop</string>
    <string name="myView">My View</string>
    <string name="myThings">My Things</string>
    <string name="playerToggleOn">Item 2</string>
    <string name="playerToggleOff">Item 1</string>
    <string name="lvl">Level</string>
    <string name="player">Player</string>
    <string name="key">Key</string>
    <string name="treasure">Treasure</string>
    <string name="wrongKey">Wrong Key</string>
    <string name="flash">Flashlight</string>
    <string name="instructions">The adventure game is a text based cave exploration game.
                                To explore the cave you use the direction buttons. To interact
                                with items as they appear use the grab and drop buttons.
                                The goal of each level is to find the hidden gold and return it
                                to the outside of the cave. Once this goal is completed the game
                                cycles to a new level. The player can hold two items. Keys are used
                                to open doors- make sure that you have the right key. A flashlight
                                will cause the direction buttons to highlight directions that are
                                open to move in green, directions blocked by a door in red, and
                                directions that a player is unable to move are hidden on the respective
                                button. The game is saved automatically and upon restarting the
                                app the option to load a game will load the most recently saved game.
                                If no game is saved, clicking load game will load a level 0 adventure.
                                \n\n Have fun and enjoy the game!</string>


</resources>
