<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/testView0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/roomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/myView"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />
    <TextView
        android:id="@+id/myItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/myThings"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/roomView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <requestFocus/></TextView>

    <Button
        android:id="@+id/goUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/up"
        android:onClick="myClickHandler"
        android:layout_above="@+id/goDown"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/goDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/down"
        android:onClick="myClickHandler"
        android:layout_above="@+id/goNorth"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/goNorth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/north"
        android:onClick="myClickHandler"
        android:layout_above="@+id/grab"
        android:layout_toLeftOf="@+id/goDown"
        android:layout_toStartOf="@+id/goDown" />
    <Button
        android:id="@+id/goSouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/south"
        android:onClick="myClickHandler"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/goUp"
        android:layout_toStartOf="@+id/goUp"
        android:layout_marginBottom="113dp" />
    <Button
        android:id="@+id/goEast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/east"
        android:onClick="myClickHandler"
        android:layout_below="@+id/goNorth"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/goWest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/west"
        android:onClick="myClickHandler"
        android:layout_below="@+id/goNorth"
        android:layout_toLeftOf="@+id/goNorth"
        android:layout_toStartOf="@+id/goNorth" />

    <Button
        android:id="@+id/grab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/grab"
        android:onClick="myClickHandler"
        android:layout_above="@+id/goSouth"
        android:layout_toLeftOf="@+id/goWest"
        android:layout_toStartOf="@+id/goWest" />

    <Button
        android:id="@+id/drop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/drop"
        android:onClick="myClickHandler"
        android:layout_alignTop="@+id/grab"
        android:layout_toLeftOf="@+id/grab"
        android:layout_toStartOf="@+id/grab" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/playerItemSelector"
        android:textOn="@string/playerToggleOn"
        android:textOff="@string/playerToggleOff"
        android:layout_alignTop="@+id/goSouth"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>